--- a/src/app/pages/search-page/entity-list/entity-list.component.html
+++ b/src/app/pages/search-page/entity-list/entity-list.component.html
@@ -6,42 +6,42 @@
 
     <div class="entity-list__item__fields">
       <div class="entity-list__item__fields__single" *ngIf="d.fields.firstname">
-        <div class="entity-list__item__fields__key">First Name:</div>
+        <div class="entity-list__item__fields__key">{{'SEARCH_ADVANCED_FIRSTNAME' | translate}}:</div>
         <div class="entity-list__item__fields__value">{{d.fields.firstname}}</div>
       </div>
 
       <div class="entity-list__item__fields__single" *ngIf="d.fields.lastname">
-        <div class="entity-list__item__fields__key">Last Name:</div>
+        <div class="entity-list__item__fields__key">{{'SEARCH_ADVANCED_LASTNAME' | translate}}:</div>
         <div class="entity-list__item__fields__value">{{d.fields.lastname}}</div>
       </div>
 
       <div class="entity-list__item__fields__single" *ngIf="d.fields.city">
-        <div class="entity-list__item__fields__key">City:</div>
+        <div class="entity-list__item__fields__key">{{'SEARCH_ADVANCED_CITY' | translate}}:</div>
         <div class="entity-list__item__fields__value">{{d.fields.city}}</div>
       </div>
 
       <div class="entity-list__item__fields__single" *ngIf="d.fields.phone">
-        <div class="entity-list__item__fields__key">Phone:</div>
+        <div class="entity-list__item__fields__key">{{'SEARCH_ADVANCED_PHONE' | translate}}:</div>
         <div class="entity-list__item__fields__value">{{d.fields.phone}}</div>
       </div>
 
       <div class="entity-list__item__fields__single" *ngIf="d.fields.sku">
-        <div class="entity-list__item__fields__key">SKU:</div>
+        <div class="entity-list__item__fields__key">{{'SEARCH_ADVANCED_SKU' | translate}}:</div>
         <div class="entity-list__item__fields__value">{{d.fields.sku}}</div>
       </div>
 
       <div class="entity-list__item__fields__single" *ngIf="d.fields.amount">
-        <div class="entity-list__item__fields__key">Amount:</div>
+        <div class="entity-list__item__fields__key">{{'SEARCH_ADVANCED_AMOUNT' | translate}}:</div>
         <div class="entity-list__item__fields__value">${{d.fields.amount}}</div>
       </div>
 
       <div class="entity-list__item__fields__single" *ngIf="d.fields.tracking_number">
-        <div class="entity-list__item__fields__key">Tracking Number:</div>
+        <div class="entity-list__item__fields__key">{{'SEARCH_ADVANCED_TRACKING' | translate}}:</div>
         <div class="entity-list__item__fields__value">{{d.fields.tracking_number}}</div>
       </div>
 
       <div class="entity-list__item__fields__single" *ngIf="d.fields.created_at && d.fields.entity_type !== 'customer'">
-        <div class="entity-list__item__fields__key">Created At:</div>
+        <div class="entity-list__item__fields__key">{{'SEARCH_ADVANCED_CREATED' | translate}}:</div>
         <div class="entity-list__item__fields__value">{{format(d.fields.created_at)}}</div>
       </div>
     </div>
