--- a/src/app/pages/search-page/perfect-match/perfect-transaction/perfect-transaction.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-transaction/perfect-transaction.component.html
@@ -2,46 +2,46 @@
 
   <div *ngIf="transaction; else spin">
     <div class="perfect-entity__info">
-      <div class="perfect-entity__info__title">Transaction Info</div>
+      <div class="perfect-entity__info__title">{{'SEARCH_PERFECT_TRANSACTION_TITLE' | translate}}</div>
 
       <div class="perfect-entity__info__fields">
 
         <div class="perfect-entity__info__fields__item">
-          <span class="perfect-entity__info__fields__item__label">Alias:</span>
+          <span class="perfect-entity__info__fields__item__label">{{'SEARCH_ADVANCED_ALIAS' | translate}}:</span>
           <span class="perfect-entity__info__fields__item__value">{{transaction.alias}}</span>
         </div>
 
         <div class="perfect-entity__info__fields__item">
-          <span class="perfect-entity__info__fields__item__label">Amount:</span>
+          <span class="perfect-entity__info__fields__item__label">{{'SEARCH_ADVANCED_AMOUNT' | translate}}:</span>
           <span class="perfect-entity__info__fields__item__value">{{transaction.amount.usd()}}</span>
         </div>
 
         <div class="perfect-entity__info__fields__item">
-          <span class="perfect-entity__info__fields__item__label">Merchant Provider:</span>
+          <span class="perfect-entity__info__fields__item__label">{{'SEARCH_ADVANCED_MERCHANTPROVIDER' | translate}}:</span>
           <span class="perfect-entity__info__fields__item__value">{{transaction.merchantProvider.name}}</span>
         </div>
 
         <div class="perfect-entity__info__fields__item">
-          <span class="perfect-entity__info__fields__item__label">Processor Response:</span>
+          <span class="perfect-entity__info__fields__item__label">{{'SEARCH_ADVANCED_RESPONSE' | translate}}:</span>
           <span class="perfect-entity__info__fields__item__value">{{transaction.processorResponse.message}}</span>
         </div>
 
         <div class="perfect-entity__info__fields__item">
-          <span class="perfect-entity__info__fields__item__label">Created At:</span>
+          <span class="perfect-entity__info__fields__item__label">{{'SEARCH_ADVANCED_CREATED' | translate}}:</span>
           <span class="perfect-entity__info__fields__item__value">{{transaction.createdAt | formatDateTime}}</span>
         </div>
       </div>
     </div>
 
     <div class="perfect-entity__table" *ngIf="transaction.products.length > 0">
-      <div class="perfect-entity__table__title">Products</div>
+      <div class="perfect-entity__table__title">{{'SEARCH_PERFECT_TRANSACTION_PRODUCT' | translate}}</div>
 
       <table class="highlight">
         <thead>
         <tr>
-          <th>Product Name</th>
-          <th class="cell--align-right">Amount</th>
-          <th>Receipt Status</th>
+          <th>{{'SEARCH_ADVANCED_NAME' | translate}}</th>
+          <th class="cell--align-right">{{'SEARCH_ADVANCED_AMOUNT' | translate}}</th>
+          <th>{{'SEARCH_ADVANCED_STATUS' | translate}}</th>
         </tr>
         </thead>
         <tbody>
