--- a/src/app/pages/rebills-page/rebills-index/rebills.component.html
+++ b/src/app/pages/rebills-page/rebills-index/rebills.component.html
@@ -1,7 +1,7 @@
 <div class="entity-index">
   <div class="entity-index__title">
-    Rebills
-    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+    {{'REBILL_INDEX_TITLE' | translate}}
+    <md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>
   </div>
 
   <md-card class="entity-index__card">
