--- a/src/app/pages/notifications-page/alerts-section/alerts-section.component.html
+++ b/src/app/pages/notifications-page/alerts-section/alerts-section.component.html
@@ -1,6 +1,6 @@
 <div class="notifications__filter">
   <md-input-container>
-    <input md-input placeholder="Filter" [(ngModel)]="filter" type="text">
+    <input md-input placeholder="{{'INDEXPAGE_FILTER' | translate}}" [(ngModel)]="filter" type="text">
   </md-input-container>
 </div>
 
