--- a/src/app/pages/transactions-page/transactions-index/transactions.component.html
+++ b/src/app/pages/transactions-page/transactions-index/transactions.component.html
@@ -1,7 +1,7 @@
 <div class="entity-index">
   <div class="entity-index__title">
-    Transactions
-    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+    {{'TRANSACTION_INDEX_TITLE' | translate}}
+    <md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>
   </div>
 
   <md-card class="entity-index__card">
