Add shipping receipt entity

--- a/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
+++ b/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
@@ -63,9 +63,10 @@
         [textOptions]="shippingReceiptText"
         [associationEnabled]="false"
         [editEnabled]="false"
-        [viewEnabled]="false"
+        [viewEnabled]="true"
         [dissociationEnabled]="false"
-        [showMenuOptions]="false">
+        [showMenuOptions]="false"
+        (view)="goToShippingReceipt($event)">
       </table-memory>
     </md-tab>
   </md-tab-group>
